Fix missing lang

--- a/langs/fr_FR/advancedproductsearch.lang
+++ b/langs/fr_FR/advancedproductsearch.lang
@@ -63,3 +63,4 @@ SearchRef = Référence recherchée
 SearchLabel = Libellé recherché
 NotEnoughRights = Cette action ne vous est pas authorisée
 ErrorMissingModuleDiscountRule = Erreur : le module règle de remise est installé mais semble supprimé
+FinalDiscountPrice = Prix final
