optimise big sql data on load dialog

--- a/langs/fr_FR/advancedproductsearch.lang
+++ b/langs/fr_FR/advancedproductsearch.lang
@@ -71,3 +71,4 @@ PredefinedFournPricesForFillHelp=Sélectionnez un tarif dans la liste pour rempl
 ProductCategories = Tags/catégories produits
 SearchWillBeOnTheseFields = La recherche globale s'effectue sur les champs suivants : %s
 ProductRefFourn = Référence fournisseur
+launchYourFirstSearch = Lancez votre recherche
