--- a/langs/fr_FR/advancedproductsearch.lang
+++ b/langs/fr_FR/advancedproductsearch.lang
@@ -48,7 +48,7 @@ resultsDisplayForNbResultsFounds = %s enregistrements affichés sur %s enregistr
 OneResultDisplayForOneResultFounds = %s enregistrement affiché sur %s enregistrement trouvé
 SearchProduct = Recherche de produits/services
 ClickToAddProductInDocument = Ajouter ce produit/service au document
-OpenSearchProductBox = Recherche avancée
+OpenSearchProductBox = Ouvrir la recherche avancée <br>Raccourci clavier "n" <br><small>Chrome, Edge, opera, Safari: alt + n  <br>Firefox : alt + shift + n</small>
 ErrorFetchingObject = Erreur : Document non trouvé
 ErrorFetchingProduct = Erreur : Produit non trouvé
 ErrorOnAddLine = Erreur lors de l'ajout de ligne
