--- a/langs/fr_FR/advancedproductsearch.lang
+++ b/langs/fr_FR/advancedproductsearch.lang
@@ -72,3 +72,4 @@ ProductCategories = Tags/catégories produits
 SearchWillBeOnTheseFields = La recherche globale s'effectue sur les champs suivants : %s
 ProductRefFourn = Référence fournisseur
 launchYourFirstSearch = Lancez votre recherche
+QtyAlreadyInDoc = Quantité déjà présente dans le document
