--- a/langs/en_US/advancedproductsearch.lang
+++ b/langs/en_US/advancedproductsearch.lang
@@ -69,4 +69,4 @@ SearchWillBeOnTheseFields=La recherche globale s'effectue sur les champs suivant
 ProductRefFourn=Référence fournisseur
 
 searchToBuy = For purchase
-searchToSell = For sell
+searchToSell = For sale
