--- a/langs/fr_FR/advancedproductsearch.lang
+++ b/langs/fr_FR/advancedproductsearch.lang
@@ -64,6 +64,8 @@ SearchLabel = Libellé recherché
 NotEnoughRights = Cette action ne vous est pas autorisée
 ErrorMissingModuleDiscountRule = Erreur : le module règle de remise est installé mais semble supprimé
 FinalDiscountPrice = Prix final
+TauxMarque=Taux de marque
+InputPrice=Saisir un prix ...
 
 PredefinedFournPricesForFill=Prix d'achat prédéfinis
 PredefinedFournPricesForFillHelp=Sélectionnez un tarif dans la liste pour remplir automatiquement la colonne "Prix"
