--- a/langs/en_US/advancedproductsearch.lang
+++ b/langs/en_US/advancedproductsearch.lang
@@ -71,3 +71,4 @@ ProductRefFourn=Référence fournisseur
 
 searchToBuy = For purchase
 searchToSell = For sale
+QtyAlreadyInDoc = Quantity already present in the document
